--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <input id="convert" type="text">
+<button onClick="go">Go</button>
 <script defer src="./convert.js"></script>
 </body>
 </html>
